--- a/FinantsApp/TransactionsListPage.xaml
+++ b/FinantsApp/TransactionsListPage.xaml
@@ -4,37 +4,31 @@
              x:Class="FinantsApp.TransactionsListPage"
              Title="Transactions List">
     <ContentPage.Content>
-        <StackLayout Padding="10">
-            <CollectionView ItemsSource="{Binding Transactions}"
+        <CollectionView ItemsSource="{Binding Transactions}"
                             SelectionMode="Single"
-                            SelectionChanged="OnTransactionSelectionChanged">
-                <CollectionView.ItemTemplate>
-                    <DataTemplate>
-                        <Frame Margin="5,5,5,5" Padding="10" BorderColor="Gray" CornerRadius="5">
-                            <StackLayout>
-                                <Label Text="{Binding Date, StringFormat='{}{0:MM/dd/yyyy}'}" 
-                                       FontAttributes="Bold"/>
-                                <Label Text="{Binding Description}" 
-                                       TextColor="Gray"/>
-                                <Label Text="{Binding Amount, StringFormat='{0:C2}'}" 
-                                       FontSize="Medium"
-                                       TextColor="Green">
-                                    <Label.Triggers>
-                                        <DataTrigger TargetType="Label" 
+                            SelectionChanged="OnTransactionSelectionChanged"
+                            Margin="20">
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Frame Margin="5,5,5,5" Padding="10" BorderColor="Gray" CornerRadius="5">
+                        <StackLayout>
+                            <Label Text="{Binding Date, StringFormat='{}{0:MM/dd/yyyy}'}" FontAttributes="Bold"/>
+                            <Label Text="{Binding Description}" TextColor="Gray"/>
+                            <Label Text="{Binding Amount, StringFormat='{0:C2}'}" FontSize="Medium" TextColor="Green">
+                                <Label.Triggers>
+                                    <DataTrigger TargetType="Label" 
                                                      Binding="{Binding IsIncome}" 
                                                      Value="False">
-                                            <Setter Property="TextColor" Value="Red"/>
-                                            <Setter Property="Text" Value="{Binding Amount, StringFormat='-{0:C2}'}"/>
-                                        </DataTrigger>
-                                    </Label.Triggers>
-                                </Label>
-                                <Label Text="{Binding Reason}" 
-                                       TextColor="DarkGray"/>
-                            </StackLayout>
-                        </Frame>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
-        </StackLayout>
+                                        <Setter Property="TextColor" Value="Red"/>
+                                        <Setter Property="Text" Value="{Binding Amount, StringFormat='-{0:C2}'}"/>
+                                    </DataTrigger>
+                                </Label.Triggers>
+                            </Label>
+                            <Label Text="{Binding Reason}" TextColor="DarkGray"/>
+                        </StackLayout>
+                    </Frame>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
     </ContentPage.Content>
 </ContentPage>
