--- a/FinantsApp/Resources/Styles/Colors.xaml
+++ b/FinantsApp/Resources/Styles/Colors.xaml
@@ -6,6 +6,11 @@
 
     <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
 
+    <Color x:Key="highlight-dark">#222831</Color>
+    <Color x:Key="accent">#6136b3</Color>
+    <Color x:Key="text">#EEEEEE</Color>
+    <Color x:Key="text-dimmed">#c9c9c9</Color>
+
     <Color x:Key="Primary">#512BD4</Color>
     <Color x:Key="PrimaryDark">#ac99ea</Color>
     <Color x:Key="PrimaryDarkText">#242424</Color>
