--- a/FinantsApp/MainPage.xaml
+++ b/FinantsApp/MainPage.xaml
@@ -7,44 +7,75 @@
         <VerticalStackLayout
             Padding="30,0"
             Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
 
             <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
+                Text="Available Funds"
                 Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
+                SemanticProperties.HeadingLevel="Level2" Margin="0"
                 SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-            <Button
-                x:Name="GoToListBtn"
-                Text="Goto List" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnListOpen"
-                HorizontalOptions="Fill" />
+            <Label 
+                Text="{Binding IncomeDifference, StringFormat='{0:C2}'}" 
+                Style="{StaticResource Headline}" 
+                FontAttributes="Bold"
+                TextColor="{StaticResource MoneyGood}">
+                <Label.Triggers>
+                    <DataTrigger TargetType="Label" Binding="{Binding IncomeGreaterThanExpenses}" Value="False">
+                        <Setter Property="TextColor" Value="{StaticResource MoneyBad}"/>
+                    </DataTrigger>
+                </Label.Triggers>
+            </Label>
+
+            <Frame>
+                <VerticalStackLayout>
+                    <Button 
+                        x:Name="GoToListBtn" 
+                        Text="List All Transactions" 
+                        Clicked="OnListOpen" 
+                        HorizontalOptions="Fill" 
+                        Margin="0,0,0,10"/>
+
+                    <CollectionView ItemsSource="{Binding FilteredTransactions}"
+                            SelectionMode="Single">
+                        <CollectionView.ItemsLayout>
+                            <LinearItemsLayout ItemSpacing="10" Orientation="Vertical">
+                            </LinearItemsLayout>
+                        </CollectionView.ItemsLayout>
+
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <Frame Margin="5,5,5,5" Padding="10" BorderColor="Gray" BackgroundColor="{StaticResource highlight-dark}" CornerRadius="5">
+                                    <StackLayout>
+                                        <Label Text="{Binding Date, StringFormat='{}{0:MM/dd/yyyy}'}" FontAttributes="Bold"/>
+                                        <Label Text="{Binding Description}" TextColor="{StaticResource text-dimmed}"/>
+                                        <Label Text="{Binding Amount, StringFormat='{0:C2}'}" FontSize="Medium" TextColor="{StaticResource MoneyGood}">
+                                            <Label.Triggers>
+                                                <DataTrigger TargetType="Label" 
+                                                     Binding="{Binding IsIncome}" 
+                                                     Value="False">
+                                                    <Setter Property="TextColor" Value="{StaticResource MoneyBad}"/>
+                                                    <Setter Property="Text" Value="{Binding Amount, StringFormat='-{0:C2}'}"/>
+                                                </DataTrigger>
+                                            </Label.Triggers>
+                                        </Label>
+                                        <Label Text="{Binding Reason}" TextColor="{StaticResource text-dimmed}"/>
+                                    </StackLayout>
+                                </Frame>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+                </VerticalStackLayout>
+            </Frame>
+
             <Button
                 x:Name="GoToDifferenceBtn"
-                Text="Goto Income difference" 
+                Text="Income/Expenses Summary" 
                 SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="OnDifferenceOpen"
                 HorizontalOptions="Fill" />
             <Button
                 x:Name="addTrans"
-                Text="Add New Transaction" 
+                Text="New Transaction" 
                 SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="OnAddNewTransaction"
                 HorizontalOptions="Fill" />
