--- a/FinantsApp/TransactionsDifferencePage.xaml
+++ b/FinantsApp/TransactionsDifferencePage.xaml
@@ -6,20 +6,67 @@
     <VerticalStackLayout Padding="10">
         <!-- Display total income, expenses, and difference -->
         <Label Text="Total Income:" FontSize="Medium" />
-        <Label Text="{Binding TotalIncome, StringFormat='{0:C2}'}" TextColor="Green" FontSize="Large" FontAttributes="Bold" />
+        <Label Text="{Binding TotalIncome, StringFormat='{0:C2}'}" TextColor="{StaticResource MoneyGood}" FontSize="Large" FontAttributes="Bold" />
 
         <Label Text="Total Expenses:" FontSize="Medium" />
-        <Label Text="{Binding TotalExpenses, StringFormat='-{0:C2}'}" TextColor="Red" FontSize="Large" FontAttributes="Bold" />
+        <Label Text="{Binding TotalExpenses, StringFormat='-{0:C2}'}" TextColor="{StaticResource MoneyBad}" FontSize="Large" FontAttributes="Bold" />
 
         <Label Text="Difference (Income - Expenses):" FontSize="Medium" />
-        <Label Text="{Binding IncomeDifference, StringFormat='{0:C2}'}" TextColor="Green" FontSize="Large" FontAttributes="Bold">
+        <Label Text="{Binding IncomeDifference, StringFormat='{0:C2}'}" TextColor="{StaticResource MoneyGood}" FontSize="Large" FontAttributes="Bold">
             <Label.Triggers>
                 <DataTrigger TargetType="Label" 
                              Binding="{Binding IncomeGreaterThanExpenses}" 
                              Value="false">
-                <Setter Property="TextColor" Value="Red"/>
-            </DataTrigger>
+                    <Setter Property="TextColor" Value="{StaticResource MoneyBad}"/>
+                </DataTrigger>
             </Label.Triggers>
         </Label>
+
+        <CollectionView ItemsSource="{Binding SummariesByTime}"
+                        SelectionMode="Single"
+                        SelectionChanged="OnSummarySelect"
+                        Margin="20">
+            <CollectionView.ItemsLayout>
+                <LinearItemsLayout ItemSpacing="5" Orientation="Vertical">
+
+                </LinearItemsLayout>
+            </CollectionView.ItemsLayout>
+
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Frame Margin="5" Padding="10" BorderColor="Gray" BackgroundColor="{StaticResource highlight-dark}" CornerRadius="5">
+                        <VerticalStackLayout>
+                            <HorizontalStackLayout>
+                                <Label Text="{Binding MonthName}"/>
+                                <Label Text="{Binding Year, StringFormat=' {0:D2}'}"/>
+                            </HorizontalStackLayout>
+                            <FlexLayout>
+                                <VerticalStackLayout Margin="5,0,5,0">
+                                    <Label Text="{Binding Income, StringFormat='{0:C2}'}" TextColor="{StaticResource MoneyGood}"/>
+                                </VerticalStackLayout>
+
+                                <Label Text="-"/>
+
+                                <VerticalStackLayout Margin="5,0,5,0">
+                                    <Label Text="{Binding Expenses, StringFormat='-{0:C2}'}" TextColor="{StaticResource MoneyBad}"/>
+                                </VerticalStackLayout>
+
+                                <Label Text="="/>
+
+                                <VerticalStackLayout Margin="5,0,5,0">
+                                    <Label Text="{Binding Difference, StringFormat='{0:C2}'}" TextColor="{StaticResource MoneyBad}">
+                                        <Label.Triggers>
+                                            <DataTrigger TargetType="Label" Binding="{Binding IsPositive}" Value="true">
+                                                <Setter Property="TextColor" Value="{StaticResource MoneyGood}"/>
+                                            </DataTrigger>
+                                        </Label.Triggers>
+                                    </Label>
+                                </VerticalStackLayout>
+                            </FlexLayout>
+                        </VerticalStackLayout>
+                    </Frame>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
     </VerticalStackLayout>
 </ContentPage>
