--- a/FinantsApp/TransactionsListPage.xaml
+++ b/FinantsApp/TransactionsListPage.xaml
@@ -4,34 +4,50 @@
              x:Class="FinantsApp.TransactionsListPage"
              Title="Transactions List">
     <ContentPage.Content>
-        <CollectionView ItemsSource="{Binding SortedTransactions}"
-                            SelectionMode="Single"
-                            SelectionChanged="OnTransactionSelectionChanged"
-                            Margin="20">
+        <CollectionView ItemsSource="{Binding GroupsByTime}" Margin="20">
             <CollectionView.ItemsLayout>
                 <LinearItemsLayout ItemSpacing="5" Orientation="Vertical">
                 </LinearItemsLayout>
             </CollectionView.ItemsLayout>
-            
+
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <Frame Margin="5,5,5,5" Padding="10" BorderColor="Gray" BackgroundColor="{StaticResource highlight-dark}" CornerRadius="5">
-                        <StackLayout>
-                            <Label Text="{Binding Date, StringFormat='{}{0:MM/dd/yyyy}'}" FontAttributes="Bold"/>
-                            <Label Text="{Binding Description}" TextColor="{StaticResource text-dimmed}"/>
-                            <Label Text="{Binding Amount, StringFormat='{0:C2}'}" FontSize="Medium" TextColor="{StaticResource MoneyGood}">
-                                <Label.Triggers>
-                                    <DataTrigger TargetType="Label" 
+                    <StackLayout>
+                        <Label TextColor="{StaticResource MoneyGood}" FontSize="Small" Text="{Binding DisplayLabel}"/>
+                        <BoxView HeightRequest="1" Margin="0,5,0,0" BackgroundColor="Gray" HorizontalOptions="Fill"/>
+
+                        <CollectionView ItemsSource="{Binding Transactions}"
+                            SelectionMode="Single"
+                            SelectionChanged="OnTransactionSelectionChanged"
+                            Margin="20">
+                            <CollectionView.ItemsLayout>
+                                <LinearItemsLayout ItemSpacing="5" Orientation="Vertical">
+                                </LinearItemsLayout>
+                            </CollectionView.ItemsLayout>
+
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate>
+                                    <Frame Margin="5,5,5,5" Padding="10" BorderColor="Gray" BackgroundColor="{StaticResource highlight-dark}" CornerRadius="5">
+                                        <StackLayout>
+                                            <Label Text="{Binding Date, StringFormat='{}{0:yyyy-MM-dd}'}" FontAttributes="Bold"/>
+                                            <Label Text="{Binding Description}" TextColor="{StaticResource text-dimmed}"/>
+                                            <Label Text="{Binding Amount, StringFormat='{0:C2}'}" FontSize="Medium" TextColor="{StaticResource MoneyGood}">
+                                                <Label.Triggers>
+                                                    <DataTrigger TargetType="Label" 
                                                      Binding="{Binding IsIncome}" 
                                                      Value="False">
-                                        <Setter Property="TextColor" Value="{StaticResource MoneyBad}"/>
-                                        <Setter Property="Text" Value="{Binding Amount, StringFormat='-{0:C2}'}"/>
-                                    </DataTrigger>
-                                </Label.Triggers>
-                            </Label>
-                            <Label Text="{Binding Reason}" TextColor="{StaticResource text-dimmed}"/>
-                        </StackLayout>
-                    </Frame>
+                                                        <Setter Property="TextColor" Value="{StaticResource MoneyBad}"/>
+                                                        <Setter Property="Text" Value="{Binding Amount, StringFormat='-{0:C2}'}"/>
+                                                    </DataTrigger>
+                                                </Label.Triggers>
+                                            </Label>
+                                            <Label Text="{Binding Reason}" TextColor="{StaticResource text-dimmed}"/>
+                                        </StackLayout>
+                                    </Frame>
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
+                    </StackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
